--- a/My portfolio/index.html
+++ b/My portfolio/index.html
@@ -347,7 +347,7 @@
       </div>
       <div class="copyright">
         <p>
-          Designed By The coder All Right Resereved</p>
+          Designed By s-arman All Right Resereved</p>
       </div>
     </div>
     <script src="script.js"></script>
