--- a/My portfolio/index.html
+++ b/My portfolio/index.html
@@ -230,7 +230,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Wikipedia App</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -254,7 +254,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Weather App</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
