--- a/My portfolio/index.html
+++ b/My portfolio/index.html
@@ -86,10 +86,13 @@
         </div>
      
       <div class="about-details-container">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem corrupti dolor exercitationem iusto
-                earum officiis optio harum, nemo minima, voluptatum accusantium iure consequuntur ipsam ut ullam,
-                quas eveniet non adipisci esse? Sequi consectetur dolore odit nostrum explicabo officiis architecto
-                veniam.</p>
+              <p>Hello, I'm Sahanee Arman, an undergraduate student currently pursuing BTech in Computer Science at Maulana Abul Kalam
+              Azad University(In-House) with a passion for software development. I have intermediate skills in HTML, CSS, JavaScript,
+              React, Node.js, MySQL, and Express, along with a Good understanding of data structures and algorithms in C++.
+              I am a proactive learner with  problem-solving skills, regularly participating in coding Contests.
+               I'm eager to gain practical experience through internships and collaborative projects, aiming to become a
+              full-stack developer. Feel free to contact me at sahaneearman601@gmail.com or connect on LinkedIn. Let's connect and
+              collaborate!</p>
                           <div class="tab-titles">
                       <p class="tab-links active-links" onclick="opentab('skills')">Skills</p>
                       <p class="tab-links" onclick="opentab('education')">Education</p>
